--- a/.site_config
+++ b/.site_config
@@ -1,1 +1,5 @@
-
+site.name: "STWHelper"
+site.mainkey: 8404830594893495859i59HDKR484MDKWKFI5RK883KEID-JEMJFUI-JDEUNJEIUIUFIRJKRJUYEUFHDJFHRJEHRUR48-JDHJRFJEGRE66
+{{
+  dataset../(site.notrealname)[STWHelper]
+}}
